<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>pl.edu.amu.wmi.daut</groupId>
  <artifactId>daut-parent</artifactId>
  <version>2.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>daut-parent</name>
  <url></url>
  <description>Projekt, z którego będą dziedziczyły wszystkie inne projekty.</description>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <profiles>
    <!--    mvn install -Psecurity-manager    -->
    <profile>
      <id>security-manager</id>
      <activation>
         <activeByDefault>false</activeByDefault>
      </activation>
      <properties>
         <policy.file>${project.build.directory}/classes/java.policy</policy.file>
         <surefire.jvm.args>-Djava.security.manager -Djava.security.policy=${policy.file}</surefire.jvm.args>
      </properties>
    </profile>

    <profile>
      <id>standard</id>
      <activation>
         <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
         <surefire.jvm.args></surefire.jvm.args>
      </properties>
    </profile>
   </profiles>

  <build>
    <resources>
      <resource>
        <directory>${basedir}/src/main/resources</directory>
      </resource>
      <resource>
        <directory>${project.build.directory}/generated-resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>

    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
          <encoding>UTF-8</encoding>
        </configuration>
        <version>2.3.1</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>

        <configuration>
            <skip>true</skip>
        </configuration>

        <executions>
            <execution>
                <id>unit-tests-offline</id>
                <phase>test</phase>
                <goals>
                    <goal>test</goal>
                </goals>
                <configuration>
                    <skip>false</skip>
                    <forkMode>always</forkMode>
                    <argLine>${surefire.jvm.args}</argLine>
                </configuration>
            </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <id>unpack-shared-resources</id>
            <goals>
              <goal>unpack-dependencies</goal>
            </goals>
            <phase>generate-resources</phase>
            <configuration>
             <outputDirectory>${project.build.directory}/generated-resources</outputDirectory>
             <includeArtifactIds>daut-shared-resources</includeArtifactIds>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>emma-maven-plugin</artifactId>
        <version>1.0-alpha-2</version>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>findbugs-maven-plugin</artifactId>
        <dependencies>
          <dependency>
            <groupId>pl.edu.amu.wmi.daut</groupId>
            <artifactId>daut-build-tools</artifactId>
            <version>2.0-SNAPSHOT</version>
          </dependency>
        </dependencies>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>2.5</version>
        <dependencies>
          <dependency>
            <groupId>pl.edu.amu.wmi.daut</groupId>
            <artifactId>daut-build-tools</artifactId>
            <version>2.0-SNAPSHOT</version>
          </dependency>
        </dependencies>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-pmd-plugin</artifactId>
        <dependencies>
          <dependency>
            <groupId>pl.edu.amu.wmi.daut</groupId>
            <artifactId>daut-build-tools</artifactId>
            <version>2.0-SNAPSHOT</version>
          </dependency>
        </dependencies>
      </plugin>

    </plugins>

    <testResources>
      <testResource>
        <directory>${project.basedir}/src/test/resources</directory>
      </testResource>
    </testResources>

  </build>


  <repositories>
    <repository>
      <id>daut.snapshots</id>
      <name>Archiva Managed Snapshot Repository</name>
      <url>http://re-research.wmi.amu.edu.pl:8081/archiva/repository/snapshots/</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>

 <distributionManagement>
    <repository>
      <id>daut.snapshots</id>
      <name>Archiva Managed Snapshot Repository</name>
      <url>http://re-research.wmi.amu.edu.pl:8081/archiva/repository/snapshots/</url>
    </repository>
    <snapshotRepository>
      <id>daut.snapshots</id>
      <name>Archiva Managed Snapshot Repository</name>
      <url>http://re-research.wmi.amu.edu.pl:8081/archiva/repository/snapshots/</url>
    </snapshotRepository>
  </distributionManagement>


  <pluginRepositories>
    <pluginRepository>
      <id>ossrh</id>
      <name>Sonatype OSS Repository</name>
      <url>http://oss.sonatype.org/content/groups/public</url>
      <layout>default</layout>
    </pluginRepository>
  </pluginRepositories>

  <dependencies>
    <dependency>
      <groupId>pl.edu.amu.wmi.daut</groupId>
      <artifactId>daut-shared-resources</artifactId>
      <version>2.0-SNAPSHOT</version>
      <classifier>resources</classifier>
      <type>zip</type>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.8.2</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>findbugs-maven-plugin</artifactId>
        <configuration>
          <excludeFilterFile>fb-excludes.xml</excludeFilterFile>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>emma-maven-plugin</artifactId>
        <version>1.0-alpha-2</version>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>2.5</version>
        <configuration>
          <configLocation>sun_checks.xml</configLocation>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-pmd-plugin</artifactId>
        <configuration>
          <ruleset>pmd_ruleset.xml</ruleset>
          <targetJdk>1.5</targetJdk>
        </configuration>
      </plugin>

    </plugins>
  </reporting>


</project>
